--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sylas/route-react": "workspace:*",
+    "@sylas/route-vite-compiler": "workspace:*",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.1"
