--- a/route/core/package.json
+++ b/route/core/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "main": "index.ts",
   "module": "index.ts",
-  "types": "index.ts"
+  "types": "index.ts",
+  "dependencies": {
+    "@sylas/route-shared": "workspace:*"
+  }
 }
 
