--- a/route/shared/package.json
+++ b/route/shared/package.json
@@ -1,10 +1,44 @@
 {
   "name": "@sylas/route-shared",
   "version": "0.0.0",
+  "description": "Shared utilities for file-based routing system",
+  "keywords": [
+    "routing",
+    "file-based-routing",
+    "route",
+    "shared",
+    "utilities",
+    "kebab-case",
+    "path-normalization"
+  ],
+  "author": "Sylas",
+  "license": "MIT",
   "private": true,
   "type": "module",
   "main": "index.ts",
   "module": "index.ts",
-  "types": "index.ts"
+  "types": "index.ts",
+  "exports": {
+    ".": {
+      "types": "./index.ts",
+      "import": "./index.ts",
+      "default": "./index.ts"
+    }
+  },
+  "files": [
+    "index.ts"
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cosmic-gao/sylas-template.git",
+    "directory": "route/shared"
+  },
+  "bugs": {
+    "url": "https://github.com/cosmic-gao/sylas-template/issues"
+  },
+  "homepage": "https://github.com/cosmic-gao/sylas-template/tree/main/route/shared#readme"
 }
 
