--- a/route/core/package.json
+++ b/route/core/package.json
@@ -1,13 +1,48 @@
 {
   "name": "@sylas/route-core",
   "version": "0.0.0",
+  "description": "Core logic for file-based routing system",
+  "keywords": [
+    "routing",
+    "file-based-routing",
+    "route",
+    "core",
+    "route-generation",
+    "route-meta",
+    "path-normalization"
+  ],
+  "author": "Sylas",
+  "license": "MIT",
   "private": true,
   "type": "module",
   "main": "index.ts",
   "module": "index.ts",
   "types": "index.ts",
+  "exports": {
+    ".": {
+      "types": "./index.ts",
+      "import": "./index.ts",
+      "default": "./index.ts"
+    }
+  },
+  "files": [
+    "index.ts",
+    "utils.ts"
+  ],
   "dependencies": {
     "@sylas/route-shared": "workspace:*"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cosmic-gao/sylas-template.git",
+    "directory": "route/core"
+  },
+  "bugs": {
+    "url": "https://github.com/cosmic-gao/sylas-template/issues"
+  },
+  "homepage": "https://github.com/cosmic-gao/sylas-template/tree/main/route/core#readme"
 }
 
