--- a/route/core/tsconfig.json
+++ b/route/core/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "lib": ["ES2020", "DOM"],
+    "lib": ["ESNext", "DOM"],
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
