--- a/apps/react/tsconfig.json
+++ b/apps/react/tsconfig.json
@@ -1,32 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-
-    /* Path alias */
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"]
+  "files": [],
+  "references": [
+    {
+      "path": "./.sylas/tsconfig.app.json"
+    },
+    {
+      "path": "./.sylas/tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
     }
-  },
-  "include": ["./**/*"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  ]
 }
 
